2004-08-29  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Beginning of ChangeLog
