@@ -1,0 +1,29 @@
+##
+## Process this file with automake to produce Makefile.in
+##
+## Please don't modify this file unless you know what you are doing
+## Please keep the Makefile.am from all the tools in sync
+##
+
+include ../common/CommonMakefile
+
+toolname = shares
+bin_PROGRAMS = shares-admin
+
+## SUBDIRS =
+CPPFLAGS =
+INCLUDES = $(GST_TOOL_CFLAGS)
+CLEANFILES = $(GST_TOOL_CLEANFILES)
+EXTRA_DIST = $(GST_TOOL_EXTRA_DIST)
+
+shares_admin_LDADD = $(GST_TOOL_LIBS) 
+shares_admin_DEPENDENCIES = $(GST_TOOL_DEPENDENCIES)
+shares_admin_SOURCES = \
+	share-export.c share-export.h \
+	share-export-smb.c share-export-smb.h \
+	share-export-nfs.c share-export-nfs.h \
+	table.c table.h \
+	transfer.c transfer.h \
+	main.c 
+
+toolpixmaps =
